--- a/css/sources/style.css
+++ b/css/sources/style.css
@@ -279,13 +279,12 @@ div.bl-panel-items > div > div {
 }
 .bl-content > ul li {
   display: inline-block;
-  width: 20%;
+  width: 30%;
   margin: 1%;
 }
 .bl-content > ul li a {
   display: block;
   padding: 0;
-  border: 8px solid rgba(0, 0, 0, 0.1);
 }
 .bl-content > ul li a img {
   display: block;
@@ -557,7 +556,9 @@ section.section-four .bl-content {
     height: 130px;
   }
   .bl-content > ul li {
-    width: 40%;
+    width: 100%;
+    margin: 0;
+    margin-bottom: 4%;
   }
 }
 @media screen and (min-width: 768px) {
