--- a/less/style.less
+++ b/less/style.less
@@ -323,13 +323,13 @@ div.bl-panel-items > div > div {
         
         li {
             display: inline-block;
-            width: 20%;
+            width: 30%;
             margin: 1%;
             
             a {
                 display: block;
                 padding: 0;
-                border: 8px solid rgba(0,0,0,0.1);
+                // border: 8px solid rgba(0,0,0,0.1);
                 
                 img {
                     display: block;
@@ -686,7 +686,9 @@ section.section-four {
 	}
 
 	.bl-content > ul li {
-		width: 40%;
+		width: 100%;
+        margin: 0;
+        margin-bottom: 4%;
 	}
 }
 
