Gulp less and css task with new improvements

--- a/css/sources/style.css
+++ b/css/sources/style.css
@@ -4,6 +4,7 @@
 /* white color */
 /* --- common FONTS -------------------------------- */
 @import url('https://fonts.googleapis.com/css?family=Anton|Handlee|Raleway:400,600,700');
+@import "font-awesome.css";
 .hand {
   font-family: 'Handlee', verdana, sans-serif;
 }
