--- a/less/style.less
+++ b/less/style.less
@@ -1,8 +1,10 @@
-@import "variables.less";
+@import "_variables.less";
 
 /* --- common FONTS -------------------------------- */
 
 @import url('https://fonts.googleapis.com/css?family=Anton|Handlee|Raleway:400,600,700');
+
+@import "font-awesome.css";
 
 .hand {
     font-family: 'Handlee', verdana, sans-serif;
