--- a/templates/index.pug
+++ b/templates/index.pug
@@ -1,5 +1,5 @@
 doctype html
-html(lang='en')
+html(lang='es')
   head
     meta(charset='UTF-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
@@ -11,8 +11,7 @@ html(lang='en')
     link(rel='shortcut icon', href='img/dist/favicon/favicon.ico')
     // Custom Styles
     link(rel='stylesheet', type='text/css', href='css/dist/style.css')
-    // Font Awesome styles
-    link(rel='stylesheet', type='text/css', href='css/dist/font-awesome.css')
+    // Modernizr javascript
     script(src='js/dist/modernizr.custom.js')
   body
     .container
@@ -304,5 +303,5 @@ html(lang='en')
     script(src='js/dist/scripts-min.js')
     script.
       $(function() {
-      Boxlayout.init();
+        Boxlayout.init();
       });
