--- a/templates/index.pug
+++ b/templates/index.pug
@@ -18,7 +18,7 @@ html(lang='es')
       #bl-main.bl-main
         //
           /////////////////////////////////////////////////////////////////
-          1 - PRIMER CUADRO :: SOBRE MI
+          1 - FIRST BLOCK :: ABOUT ME (es) Primer cuadro :: sobre mí
           /////////////////////////////////////////////////////////////////////
         section.section-one
           .bl-box.bl-white
@@ -92,7 +92,7 @@ html(lang='es')
             i.fa.fa-close
         //
           /////////////////////////////////////////////////////////////////
-          2 - TERCER CUADRO :: MIS SERVICIOS
+          2 - SECOND BLOCK :: SERVICES (es) Segundo cuadro :: Servicios
           /////////////////////////////////////////////////////////////////////
         section.section-two
           .bl-box
@@ -169,7 +169,7 @@ html(lang='es')
             i.fa.fa-close
         //
           /////////////////////////////////////////////////////////////////
-          3 - TRABAJOS CUADRO :: MIS SERVICIOS
+          3 - THIRT BLOCK :: PORTFOLIO (es) Tercer cuadro :: Portafolio
           /////////////////////////////////////////////////////////////////////
         section(id='bl-work-section section-three')
           .bl-box
@@ -183,28 +183,28 @@ html(lang='es')
             ul#bl-work-items
               li(data-panel='panel-1')
                 a(href='#', title='')
-                  img(src='images/1.jpg', alt='')
+                  img(src='img/dist/images/1.jpg', alt='')
               li(data-panel='panel-2')
                 a(href='#', title='')
-                  img(src='images/2.jpg', alt='')
+                  img(src='img/dist/images/2.jpg', alt='')
               li(data-panel='panel-3')
                 a(href='#', title='')
-                  img(src='images/3.jpg', alt='')
+                  img(src='img/dist/images/3.jpg', alt='')
               li(data-panel='panel-4')
                 a(href='#', title='')
-                  img(src='images/4.jpg', alt='')
+                  img(src='img/dist/images/4.jpg', alt='')
               li(data-panel='panel-3')
                 a(href='#', title='')
-                  img(src='images/3.jpg', alt='')
+                  img(src='img/dist/images/3.jpg', alt='')
               li(data-panel='panel-4')
                 a(href='#', title='')
-                  img(src='images/4.jpg', alt='')
+                  img(src='img/dist/images/4.jpg', alt='')
               li(data-panel='panel-1')
                 a(href='#', title='')
-                  img(src='images/1.jpg', alt='')
+                  img(src='img/dist/images/1.jpg', alt='')
               li(data-panel='panel-2')
                 a(href='#', title='')
-                  img(src='images/2.jpg', alt='')
+                  img(src='img/dist/images/2.jpg', alt='')
             .logo-block
                 img.logointro(src='img/dist/logos/jalofernandez-logo.svg', alt='Logotipo de Jalofernandez', title='Logotipo de Jalofernandez')
                 p Diseño y programación
@@ -212,7 +212,7 @@ html(lang='es')
             i.fa.fa-close
         //
           /////////////////////////////////////////////////////////////////
-          4 - CUARTO CUADRO :: CONTACTO
+          4 - FOURTH BLOCK :: CONTACT (es) Cuarto cuadro :: Contacto
           /////////////////////////////////////////////////////////////////////
         section.section-four
           .bl-box
@@ -245,15 +245,15 @@ html(lang='es')
             i.fa.fa-close
         //
           /////////////////////////////////////////////////////////////////
-          00 - DESPLEGABLES de WORKS :: Panel items for the works
+          00 - ALL PANEL ITEMS FOR PORTFOLIO (es) desplegables del portafolio
           /////////////////////////////////////////////////////////////////////
         #bl-panel-work-items.bl-panel-items
           // Panel items 1 :: WORKS
           div(data-panel='panel-1')
             div
-              img(src='images/1.jpg', alt='')
-              img(src='images/1.jpg', alt='')
-              img(src='images/1.jpg', alt='')
+              img(src='img/dist/images/1.jpg', alt='')
+              img(src='img/dist/images/1.jpg', alt='')
+              img(src='img/dist/images/1.jpg', alt='')
               h3 Diseño de jardín:
               p
                 | Para salvar el desnivel existente entre la cota de terraza y la de la piscina, se diseñó un banco corrido a lo largo del jardín, dando uso de bancada por el lado de la piscina.
@@ -261,9 +261,9 @@ html(lang='es')
           // Panel items 2 :: WORKS
           div(data-panel='panel-2')
             div
-              img(src='images/2.jpg', alt='')
-              img(src='images/2.jpg', alt='')
-              img(src='images/2.jpg', alt='')
+              img(src='img/dist/images/2.jpg', alt='')
+              img(src='img/dist/images/2.jpg', alt='')
+              img(src='img/dist/images/2.jpg', alt='')
               h3 Restaurante Fredy's
               p
                 | Cambio de imagen con muy poco presupuesto y manteniendo el mobiliario existente. Se consiguió solucionar el problema del ruido instalando un friso de madera perimetral a media altura, y pallets de obra pintados en diferentes colores.
@@ -284,9 +284,9 @@ html(lang='es')
           // Panel items 4 :: WORKS
           div(data-panel='panel-4')
             div
-              img(src='images/4.jpg', alt='')
-              img(src='images/4.jpg', alt='')
-              img(src='images/4.jpg', alt='')
+              img(src='img/dist/images/4.jpg', alt='')
+              img(src='img/dist/images/4.jpg', alt='')
+              img(src='img/dist/images/4.jpg', alt='')
               h3 Reforma de vivienda en Pozuelo
               p Reforma integral en unifamiliar.
           // /.panel-4
